# CookingProjects

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
MultithreadingLab/: CMakeLists.txt
MultithreadingLab/source/: CMakeLists.txt  accumulation.cpp  accumulation.h  main.cpp  thread_pool.cpp  thread_pool.h  time_manager.cpp  time_manager.h  timer_manager.cpp  timer_manager.h
MultithreadingLab/tests/: CMakeLists.txt  thread_pool_tests.cpp  timer_manager_tests.cpp
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/cubes/: string.cpp  string.h
SortLab/: CMakeLists.txt
SortLab/source/: CMakeLists.txt  main.cpp
SortLab/source/algo/: sort.cpp  sort.h  sort.inl
SortLab/tests/: CMakeLists.txt
SortLab/tests/algo/: sort_perf_test.cpp  sort_test.cpp
Utility/: CMakeLists.txt  print.h  test_utility.cpp  test_utility.h  utility.cpp  utility.h
